Change URI type to URL.